--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
+    implementation 'com.google.android.gms:play-services-vision:11.0.2'
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
 }
