--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -31,10 +32,10 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
+//    implementation 'com.android.support:design:23.0.1'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -43,6 +44,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
-    implementation 'com.google.android.gms:play-services-vision:11.0.2'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     implementation 'com.budiyev.android:code-scanner:2.1.0'
+
+    implementation 'com.android.volley:volley:1.2.0'
+
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
